# my-commander

./: Cargo.toml  Dioxus.toml
assets/: app.css
src/: consts.rs  main.rs  utils.rs  volume_path_and_file.rs
src/actions/: create_dir_dialog.rs  create_dir_dialog_ok_button.rs  delete.rs  delete_dialog.rs  handle_key_press.rs  mod.rs  press_down.rs  view_file.rs
src/background_tasks/: calc_dir_size.rs  mod.rs  save_state.rs
src/components/: dialog_buttons.rs  mod.rs
src/dialogs/: delete_confirmation.rs  dialog_state.rs  dialog_template.rs  dialog_view_file.rs  error_dialog.rs  mod.rs  render_dialog.rs
src/dialogs/create_dir/: create_dir_dialog.rs  mod.rs
src/dialogs/delete/: confirmation_content.rs  delete_dialog.rs  deleting_content.rs  mod.rs
src/dialogs/dialog_view_file/: dialog_view_file.rs  mod.rs  view_hex.rs
src/scripts/: calc_dir_size.rs  mod.rs
src/states/: data_state.rs  disks_state.rs  main_state.rs  mod.rs  panel_file_item.rs  panel_files_statistics.rs  panel_state.rs  persistence_state.rs
src/views/: bottom_panel.rs  handle_key_press.rs  icons.rs  mod.rs  panel.rs  render_select_disk.rs
