[package]
name = "my-commander"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }

tokio = { version = "*", features = ["full"] }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
sysinfo = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
lazy_static = "*"

futures-util = "*"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
